# datamortem

./: .gitignore  ALEMBIC_SETUP.md  AUTHENTICATION.md  CLAUDE_CODE_CONTEXT.md  DIND_MIGRATION.md  FRONTEND_IMPROVEMENTS.md  GUIDE_RENOMMAGE.md  HEALTHCHECK_GUIDE.md  HTTPS_SETUP.md  HTTP_TO_HTTPS_MIGRATION.md  INTEGRATION_TEST_RESULTS.md  INTERFACE_READY.md  MAKEFILE.md  MIGRATIONS.md  MIGRATION_SUCCESS.md  Makefile  NEXT_STEPS.md  PHASE1_COMPLETE.md  PRE_PRODUCTION_CHECKLIST.md  PRODUCTION.md  PROD_READY_ROADMAP.md  QUICK_SECURITY_SETUP.md  QUICK_START.md  README.md  README_SESSION.md  SANDBOX.md  SANDBOX_SETUP.md  SECURITY_IMPROVEMENTS.md  SECURITY_PROD_CHECKLIST.md  STACK_SETUP.md  STATUS.md  dataMortem_architecture_overview.md  docker-compose.opensearch.yml  docker-compose.prod.yml  docker-compose.yml  index_split_files.py  init-demo-data.sh  migrate-to-dind.sh  rename_project.sh  start-stack.sh  (+2 more)
services/api/: .dockerignore  .env.example  Dockerfile  OPENSEARCH_TESTING.md  alembic.ini  dev.db  init-db.sh  populate.sh  pyproject.toml  pytest.ini  run_tests.sh  test_api_search.sh  test_opensearch.py
services/api/alembic/: env.py
services/api/alembic/versions/: 0879ed3e0c27_add_multi_language_support_to_custom_.py  0d8c359bb4f1_sync_with_current_models_state.py  2a6d94c6cc2b_add_hedgedoc_slug_to_cases.py  408e07f64f51_merge_case_members_and_multi_language.py  431f727a1611_add_feature_flags_table.py  7b4f50a1e0e0_add_user_security_fields.py  7c6ac304c575_merge_multiple_heads.py  8f6e0f2be8d2_add_script_runtime_fields.py  a1b2c3d4e5f6_add_case_members_table_for_sharing.py  (+1 more)
services/api/app/: celery_app.py  config.py  db.py  init_admin.py  main.py  models.py  seed_modules.py  state.py
services/api/app/auth/: __init__.py  (+5 more)
services/api/scripts/: create_user.py  init_feature_flags.py  test_ingestion_complete.py
services/api/tests/: README.md  conftest.py  test_auth_permissions.py  test_auth_security.py  test_models.py  test_routers_auth.py  test_routers_case.py  test_routers_health.py
(+126 files in other folders)
