[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.2",
    "boto3==1.35.0",
    "celery==5.4.0",
    "dissect>=3.20.1",
    "fastapi==0.115.0",
    "psycopg[binary]==3.2.1",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "redis==5.0.8",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.30.0",
]
