[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.2",
    "bcrypt>=4.0.1",
    "boto3==1.35.0",
    "celery==5.4.0",
    "dissect>=3.20.1",
    "dissect-target[full]==3.23.1",
    "email-validator>=2.0.0",
    "fastapi==0.115.0",
    "opensearch-py==2.8.0",
    "pandas==2.2.2",
    "pyotp>=2.9.0",
    "psycopg2-binary==2.9.9",
    "pyarrow==17.0.0",
    "pydantic==2.9.2",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.8.0",
    "python-multipart==0.0.12",
    "redis==5.0.8",
    "requests>=2.32.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "faker>=19.0.0",
]
